# cookiecutter-templates

./: README.md
c-template/: cookiecutter.json
c-template/{{cookiecutter.project_name}}/: CMakeLists.txt
c-template/{{cookiecutter.project_name}}/{{cookiecutter.sources_folder}}/: main.c
cpp-template/: cookiecutter.json
cpp-template/{{cookiecutter.project_name}}/{{cookiecutter.include_folder}}/: main.hpp
cpp-template/{{cookiecutter.project_name}}/{{cookiecutter.sources_folder}}/: main.cpp
cpp/{{cookiecutter.project_name}}/: CMakeLists.txt
cpp/{{cookiecutter.project_name}}/{{cookiecutter.sources_folder}}/: main.cpp
